Add maintenance window routes to docs
